--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,7 @@
 [run]
 omit = ddtrace/vendor/*
+concurrency = multiprocessing
+parallel = true
 
 # Ignore warnings when we run as Python 2.7 and have a Python 3.x file
 disable_warnings = couldnt-parse
