Add pytest-randomly to tox

--- a/tox.ini
+++ b/tox.ini
@@ -115,6 +115,7 @@ deps =
     ninja
     pytest-cov
     pytest-mock
+    pytest-randomly
     opentracing
 # test dependencies installed in all envs
     mock
