--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,8 +98,10 @@ services:
             - DD_BIND_HOST=0.0.0.0
             - DD_API_KEY=${DD_API_KEY-invalid_but_this_is_fine}
             - DD_APM_RECEIVER_SOCKET=/tmp/ddagent/trace.sock
+            - DD_OTLP_CONFIG_RECEIVER_PROTOCOLS_HTTP_ENDPOINT=0.0.0.0:4318
         ports:
             - "127.0.0.1:8126:8126"
+            - "127.0.0.1:4318:4318"
         volumes:
           - ddagent:/tmp/ddagent:rw
     testagent:
